--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
       document.body.appendChild(script);
     });
   </script>
+  <link rel="manifest" href="build/web/manifest.json">
 </body>
 </html>
