--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="packages/browser/dart.js"></script>
   <script src="packages/browser/zone.js"></script>
   <script src="packages/browser/async.js"></script>
+  <link rel="manifest" href="web/manifest.json">
 </head>
 <body>
   <div id="root"></div>
@@ -19,6 +20,5 @@
       document.body.appendChild(script);
     });
   </script>
-  <link rel="manifest" href="build/web/manifest.json">
 </body>
 </html>
