--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mon application web</title>
-  <script src="main.dart.js" type="application/dart"></script>
-  <script src="packages/browser/dart.js"></script>
-  <script src="packages/browser/zone.js"></script>
-  <script src="packages/browser/async.js"></script>
   <link rel="manifest" href="web/manifest.json">
+  <script src="web/flutter.js"></script>
+  <script src="web/flutter_bootstrap.js"></script>
+  <script src="web/flutter_service_worker.js"></script>
 </head>
 <body>
   <div id="root"></div>
